--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ build-backend = "flit_core.buildapi"
 name = "primaschema"
 authors = [
     {name = "Bede Constantinides", email="bedeabc@gmail.com"},
-    {name = "Peter van Heusden", email="pvh@sanbi.ac.za"}
+    {name = "Chris Kent", email="chrisgkent@protonmail.com"},
+    {name = "Peter van Heusden", email="pvh@sanbi.ac.za"},
 ]
 dynamic = ["version", "description"]
 readme = "README.md"
@@ -14,7 +15,6 @@ requires-python = ">=3.8"
 keywords = ["genomics"]
 license = {text = "MIT License"}
 classifiers = [
-    "Framework :: Django",
     "Programming Language :: Python :: 3.12",
     "Environment :: Console",
     "Intended Audience :: Science/Research",
@@ -48,7 +48,8 @@ Home = "https://github.com/pha4ge/primaschema"
 dev = [
     "pytest",
     "pre-commit",
-    "flit"
+    "flit",
+    "ruff>=0.14.6"
 ]
 
 [tool.flit.external-data]
