--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 ]
 dynamic = ["version", "description"]
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 keywords = ["genomics"]
 license = {text = "MIT License"}
 classifiers = [
@@ -26,6 +26,7 @@ classifiers = [
 dependencies = [
     "altair>=5.3.0",
     "biopython>=1.80",
+    "cyclopts>=4.3.0",
     "defopt==6.4.0",
     "httpx>=0.27.0",
     "jsonschema",
@@ -33,9 +34,10 @@ dependencies = [
     "natsort>=8.4.0",
     "pandas>=1.5.3",
     "platformdirs>=4.2.2",
+    "primalbedtools>=1.0.0",
     "pydantic>=2.0.0",
     "pyyaml>=6.0.2",
-    "vl-convert-python>=1.6.0"
+    "vl-convert-python>=1.6.0",
 ]
 
 [project.scripts]
@@ -59,3 +61,6 @@ directory = "test"
 filterwarnings = [
     "ignore::pydantic.warnings.PydanticDeprecatedSince211:linkml.generators.*",
 ]
+
+[tool.ruff.format]
+exclude = ["info.py"]
